[tool.poetry]
name = "bismillah-py"
version = "1.0.0"
description = "the_sentence"
authors = ["Iqbal Syifa Mahmuda <bal.mahmuda@gmail.com>", "اللّٰه"]
packages = [{include = "bismillah.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
